<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp" >

    <TextView
        style="@style/ContentsHeader"
        android:gravity="start"
        android:layout_weight="1"
        android:text="@string/contents_header_symbol" />

    <TextView
        style="@style/ContentsHeader"
        android:layout_weight="1"
        android:text="@string/contents_header_price" />

    <TextView
        style="@style/ContentsHeader"
        android:layout_weight="2"
        android:text="@string/contents_header_quantity" />

    <TextView
        style="@style/ContentsHeader"
        android:layout_weight="2"
        android:text="@string/contents_header_total" />
</LinearLayout>